Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
Qt Creator 12.0.0
-
-
96221be3e (15.0)
Description
With Cmake when using the experimental Docker plugin, QtCreator freezes during the configuration stage when Docker container added as external device.
• When configuring the project, QtCreator freezes for several minutes. The whole UI is frozen, and the window-manager suggests killing the application.
After waiting for several minutes, QtCreator unfreezes, and we can proceed to build the project without issues, at normal speed.
• The issue happens again if we change the project in a way that requires a reconfiguration, for instance: if we add a new source file.
• The issue happens every time we re-open the project with QtCreator.
This works good when using a local kit, the project's configuration takes just a few seconds, and does not freeze QtCreator.
Attachments
For Gerrit Dashboard: QTCREATORBUG-30790 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
597065,4 | Docker: Fix crash during directory iteration | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |