Docker: Fix crash during directory iteration

Task-number: QTCREATORBUG-30790
Change-Id: Id59aa00f2ba8c960dd70d982e2d46a0bcf5bc0da
Reviewed-by: hjk <hjk@qt.io>